--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,78 @@
+aioredis==1.3.1
+amqp==5.3.1
 asgiref==3.8.1
-boto3==1.38.36
-botocore==1.38.36
+async-timeout==5.0.1
+attrs==25.3.0
+autobahn==24.4.2
+Automat==25.4.16
+billiard==4.2.1
+boto3==1.37.37
+botocore==1.37.37
+celery==5.5.1
+certifi==2025.6.15
+cffi==1.17.1
+channels==3.0.5
+channels-redis==3.4.1
+charset-normalizer==3.4.2
+click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+constantly==23.10.4
+cryptography==45.0.4
+daphne==3.0.2
 dj-database-url==3.0.0
-Django==5.2
+Django==5.2.3
 django-cors-headers==4.7.0
+django-debug-toolbar==5.1.0
+django-filter==25.1
 django-storages==1.14.6
 djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
+docker==7.1.0
+drf-yasg==1.21.10
+flower==2.0.1
+git-filter-repo==2.47.0
 gunicorn==23.0.0
+hiredis==3.2.1
+humanize==4.12.2
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
+inflection==0.5.1
 jmespath==1.0.1
+kombu==5.5.3
+msgpack==1.1.1
 packaging==25.0
 pillow==11.2.1
+prometheus_client==0.21.1
+prompt_toolkit==3.0.51
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+PyJWT==2.9.0
+pyOpenSSL==25.1.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-s3transfer==0.13.0
+pytz==2025.2
+pywin32==310
+PyYAML==6.0.2
+redis==6.2.0
+requests==2.32.4
+s3transfer==0.11.5
+service-identity==24.2.0
+setuptools==80.9.0
 six==1.17.0
 sqlparse==0.5.3
+tornado==6.4.2
+Twisted==25.5.0
+txaio==23.6.1
 typing_extensions==4.14.0
 tzdata==2025.2
+uritemplate==4.1.1
 urllib3==2.4.0
+vine==5.1.0
+wcwidth==0.2.13
 whitenoise==6.9.0
+zope.interface==7.2
