--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aioredis==1.3.1
 amqp==5.3.1
+anyio==4.9.0
 asgiref==3.8.1
 async-timeout==5.0.1
 attrs==25.3.0
@@ -37,6 +38,7 @@ git-filter-repo==2.47.0
 gunicorn==23.0.0
 h11==0.16.0
 hiredis==3.2.1
+httptools==0.6.4
 humanize==4.12.2
 hyperlink==21.0.0
 idna==3.10
@@ -56,6 +58,7 @@ pycparser==2.22
 PyJWT==2.9.0
 pyOpenSSL==25.1.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 pytz==2025.2
 pywin32==310
 PyYAML==6.0.2
@@ -65,6 +68,7 @@ s3transfer==0.11.5
 service-identity==24.2.0
 setuptools==80.9.0
 six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
 tornado==6.4.2
 Twisted==25.5.0
@@ -75,6 +79,8 @@ uritemplate==4.1.1
 urllib3==2.4.0
 uvicorn==0.30.1
 vine==5.1.0
+watchfiles==1.1.0
 wcwidth==0.2.13
+websockets==15.0.1
 whitenoise==6.9.0
 zope.interface==7.2
